updated db access pattern, updated swagger yaml
