# src/main/java/io/swagger/api/impl/AttorneyApiServiceImpl.java
@@ -4,31 +4,36 @@ import io.swagger.api.*;
 import io.swagger.model.*;
 
 import io.swagger.model.Attorney;
+import io.swagger.model.AttorneyResponse;
 
 import java.util.List;
 import io.swagger.api.NotFoundException;
 
 import java.io.InputStream;
 
-import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 
 import application.model.AttorneyModel;
 
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.SecurityContext;
+
+import com.cloudant.client.api.query.QueryResult;
+
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-08-09T16:09:16.040+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-08-11T08:44:06.780+02:00")
 public class AttorneyApiServiceImpl extends AttorneyApiService {
-    @ConfigProperty(name="AGGREGATOR_DB_URL")
-    public String databaseUrl;
-    @ConfigProperty(name="AGGREGATOR_DB_IAM_KEY")
-    public String databaseIamKey;
+    private AttorneyModel am = null;
+
+    public AttorneyApiServiceImpl() {
+        String databaseUrl = System.getenv("AGGREGATOR_DB_URL");
+        String databaseIamKey = System.getenv("AGGREGATOR_DB_IAM_KEY");
+        am = new AttorneyModel(databaseUrl, databaseIamKey, "outcarcerate");
+    }
 
     @Override
     public Response addAttorney(Attorney body, SecurityContext securityContext) throws NotFoundException {
-        AttorneyModel am = new AttorneyModel(databaseUrl, databaseIamKey, "outcarcerate");
-
+        System.out.println("addAttorney");
         com.cloudant.client.api.model.Response resp = am.save(body);
         if(resp.getError() == null) {
             return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, resp.getId())).build();
@@ -38,14 +43,21 @@ public class AttorneyApiServiceImpl extends AttorneyApiService {
     }
     @Override
     public Response deleteAttorney(String attorneyId, SecurityContext securityContext) throws NotFoundException {
-        System.out.println("Deleting attorney: " + attorneyId);
+        System.out.println("deleteAttorney");
+        // do some magic!
         return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
     }
     @Override
+    public Response getAllAttorneys(SecurityContext securityContext) throws NotFoundException {
+        System.out.println("getAllAttorneys");
+        QueryResult<Attorney> qr = am.getAll();
+        return Response.ok().entity(new AttorneyResponse()).build();
+        //return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    }
+    @Override
     public Response getAttorneyById(String attorneyId, SecurityContext securityContext) throws NotFoundException {
+        System.out.println("getAttorneyById");
         System.out.println("Getting attorney: " + attorneyId);
-        AttorneyModel am = new AttorneyModel(databaseUrl, databaseIamKey, "outcarcerate");
-
         Attorney attorney = am.read(attorneyId);
         System.out.println("Attorney: " + attorney.toString());
         return Response.ok().entity(attorney).build();
