# src/main/resources/swagger.yaml
@@ -36,6 +36,19 @@ paths:
       responses:
         "405":
           description: "Invalid input"
+    get:
+      tags:
+      - "attorney"
+      summary: "Get a list of attorneys"
+      description: "Returns a all attorneys"
+      operationId: "getAllAttorneys"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/AttorneyResponse"
   /attorney/{attorneyId}:
     get:
       tags:
@@ -55,7 +68,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Attorney"
+            $ref: "#/definitions/AttorneyResponse"
         "400":
           description: "Invalid ID supplied"
         "404":
@@ -310,3 +323,17 @@ definitions:
         type: "string"
       message:
         type: "string"
+  AttorneyResponse:
+    type: "object"
+    required:
+    - "success"
+    properties:
+      code:
+        type: "integer"
+        format: "int32"
+      success:
+        type: "boolean"
+      attorney:
+        type: "array"
+        items:
+          $ref: "#/definitions/Attorney"
